--- a/taskmaster/core/templates/base.html
+++ b/taskmaster/core/templates/base.html
@@ -13,6 +13,7 @@
             <a href="{% url 'index' %}">Home</a>
             <a href="{% url 'project-list' %}">My Projects</a>
             <a href="{% url 'task-list' %}">My Tasks</a>
+            <a href="{% url 'notifications' %}">Notifications</a>
             {% comment %} <a href="{% url 'spaces' %}">Spaces</a> {% endcomment %}
             {% comment %} <a href="{% url 'profile' %}">Profile</a> {% endcomment %}
             <a href="{% url 'logout' %}">Logout</a>
