--- a/taskmaster/core/templates/project_detail.html
+++ b/taskmaster/core/templates/project_detail.html
@@ -1,15 +1,24 @@
 {% extends 'base.html' %}
+
 {% block content %}
-    <h2>{{ project.title }}</h2>
-    <p>{{ project.description }}</p>
-    <a href="{% url 'task-create' %}?project={{ project.id }}">Add Task</a>
-    <ul>
-        {% for task in project.tasks.all %}
-            <li>
-                <a href="{% url 'task-detail' task.pk %}">{{ task.title }}</a> - {{ task.get_status_display }}
-            </li>
-        {% endfor %}
-    </ul>
-    <a href="{% url 'project-update' project.pk %}">Edit</a>
-    <a href="{% url 'project-delete' project.pk %}">Delete</a>
+<h2>{{ project.title }}</h2>
+<p>{{ project.description }}</p>
+<a href="{% url 'send_invitation' project.id %}">Invite user</a>
+
+<!-- Ссылка на создание новой задачи, привязанной к текущему проекту -->
+<a href="{% url 'task-create' %}?project={{ project.id }}">Create New Taskу</a>
+
+<ul>
+    {% for task in project.tasks.all %}
+        <li>
+            <!-- Ссылка на страницу задачи -->
+            <a href="{% url 'task-detail' task.pk %}">{{ task.title }}</a> - {{ task.get_status_display }}
+        </li>
+    {% empty %}
+        <p>В этом проекте пока нет задач.</p>
+    {% endfor %}
+</ul>
+
+<a href="{% url 'project-update' project.id %}">Edit project</a>
+<a href="{% url 'project-delete' project.id %}">Delete project</a>
 {% endblock %}
