--- a/taskmaster/core/templates/task_detail.html
+++ b/taskmaster/core/templates/task_detail.html
@@ -15,6 +15,9 @@
         <a href="{% url 'task-update' task.pk %}">Edit Task</a>
         <a href="{% url 'task-delete' task.pk %}">Delete Task</a>
     {% endif %}
+{% elif task.project and task.project.owner == user %}
+    <a href="{% url 'task-update' task.pk %}">Edit Task</a>
+    <a href="{% url 'task-delete' task.pk %}">Delete Task</a>
 {% endif %}
 
 {% endblock %}
