--- a/taskmaster/core/templates/base.html
+++ b/taskmaster/core/templates/base.html
@@ -10,7 +10,7 @@
 
     <body>
         <nav>
-            <a href="{% url 'index' %}">Home</a>
+            <a href="{% url 'index' %}">Profile</a>
             <a href="{% url 'project-list' %}">My Projects</a>
             <a href="{% url 'task-list' %}">My Tasks</a>
             <a href="{% url 'notifications' %}">Notifications</a>
