--- a/taskmaster/core/templates/base.html
+++ b/taskmaster/core/templates/base.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        {% comment %} {% load static %} {% endcomment %}
+        {% load static %}
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">  
         <title>TaskMaster</title>
-        {% comment %} <link rel="stylesheet" href="{% static 'css/style.css' %}"> {% endcomment %}
+        <link rel="stylesheet" href="{% static 'css/style.css' %}">
     </head>
 
     <body>
@@ -14,8 +14,6 @@
             <a href="{% url 'project-list' %}">My Projects</a>
             <a href="{% url 'task-list' %}">My Tasks</a>
             <a href="{% url 'notifications' %}">Notifications</a>
-            {% comment %} <a href="{% url 'spaces' %}">Spaces</a> {% endcomment %}
-            {% comment %} <a href="{% url 'profile' %}">Profile</a> {% endcomment %}
             <a href="{% url 'logout' %}">Logout</a>
         </nav>
         {% block content %}     
