--- a/taskmaster/static/css/login_register.css
+++ b/taskmaster/static/css/login_register.css
@@ -1,6 +1,3 @@
-/* login_register.css */
-
-/* Общие стили для логина и регистрации */
 body {
     font-family: Arial, sans-serif;
     background-color: #f4f7f6;
@@ -9,7 +6,7 @@ body {
 }
 
 header {
-    background-color: #7420d5; /* Бирюзовый цвет для шапки */
+    background-color: #7420d5;
     color: white;
     text-align: center;
     padding: 15px 0;
@@ -26,10 +23,11 @@ h1 {
     background-color: white;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     border-radius: 8px;
+   
 }
 
 .form-container input {
-    width: 100%;
+    width: 95%;
     padding: 10px;
     margin: 10px 0;
     border: 1px solid #ddd;
@@ -38,7 +36,7 @@ h1 {
 }
 
 .form-container button {
-    background-color: #7420d5; /* Бирюзовый цвет для кнопок */
+    background-color: #7420d5;
     color: white;
     padding: 12px;
     width: 100%;
@@ -63,7 +61,7 @@ footer {
 }
 
 footer {
-    margin-top: auto; /* Это гарантирует, что футер будет внизу */
+    margin-top: auto;
 }
 
 p a {
@@ -74,7 +72,6 @@ p a:hover {
     text-decoration: underline;
 }
 
-/* Сделаем мобильную версию более удобной */
 @media (max-width: 768px) {
     body {
         font-size: 14px;
